// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SubMenu /> should render a menu that is open on render 1`] = `
<Collapsible
  className=""
  classParentString="Collapsible"
  contentInnerClassName=""
  contentOuterClassName=""
  easing="linear"
  lazyRender={false}
  onClose={[Function]}
  onClosing={[Function]}
  onOpen={[Function]}
  onOpening={[Function]}
  open={true}
  openedClassName=""
  overflowWhenOpen="hidden"
  tabIndex={null}
  transitionCloseTime={null}
  transitionTime={250}
  trigger={
    <li>
      Click me!
    </li>
  }
  triggerClassName=""
  triggerDisabled={false}
  triggerOpenedClassName=""
  triggerSibling={null}
  triggerStyle={null}
  triggerTagName="span"
>
  <styled.ul>
    <li>
      Hello I am the child!
    </li>
  </styled.ul>
</Collapsible>
`;

exports[`<SubMenu /> should render a menu with the nested class 1`] = `
<Collapsible
  className=""
  classParentString="Collapsible"
  contentInnerClassName=""
  contentOuterClassName=""
  easing="linear"
  lazyRender={false}
  onClose={[Function]}
  onClosing={[Function]}
  onOpen={[Function]}
  onOpening={[Function]}
  open={false}
  openedClassName=""
  overflowWhenOpen="hidden"
  tabIndex={null}
  transitionCloseTime={null}
  transitionTime={250}
  trigger={
    <li>
      Click me!
    </li>
  }
  triggerClassName=""
  triggerDisabled={false}
  triggerOpenedClassName=""
  triggerSibling={null}
  triggerStyle={null}
  triggerTagName="span"
>
  <styled.ul>
    <li>
      Hello I am the child!
    </li>
  </styled.ul>
</Collapsible>
`;
